--- a/flutter_poc/android/app/build.gradle
+++ b/flutter_poc/android/app/build.gradle
@@ -38,11 +38,12 @@ android {
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
+        main.jniLibs.srcDirs = ['../../src/libs']
     }
 
     externalNativeBuild {
         cmake {
-            path file('src/main/cpp/CMakeLists.txt')
+            path file('../../src/CMakeLists.txt')
         }
     }
 
