--- a/flutter_poc/pubspec.yaml
+++ b/flutter_poc/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   camera: "0.10.5+9"
+  ffi: 1.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
