--- a/flutter_poc/src/CMakeLists.txt
+++ b/flutter_poc/src/CMakeLists.txt
@@ -7,7 +7,7 @@ add_library( # Specifies the name of the library.
              SHARED
 
              # Provides a relative path to your source file(s).
-        hello_world.cpp)
+        hello_world.c)
 
 find_library( log-lib log )
 
